<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreTV"
        android:id="@+id/scoreTV"
        android:textSize="40sp"/>

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email_Button"
        android:textSize="60sp"
        android:id="@+id/emailBTN"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Show_high_score"
        android:textSize="60sp"
        android:id="@+id/ShowHighScore"
        />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/High_Score"
        android:id="@+id/HighScore"
        android:textSize="40sp"/>

</LinearLayout>